# mesure_instituts_sondage

./: .gitignore  IPF.ipynb  README.md  compare_instituts.ipynb  explications.ipynb  methods.py  pyproject.toml
elabe/: elabe_extract.ipynb  nex_extract.py  toolbox_elabe.py
elabe/data/: 2020-01-15.p  2020-02-05.p  2020-03-04.p  2020-03-31.p  2020-05-05.p  2020-06-03.p  2020-07-01.p  2020-10-07.p  2020-10-09.p  2020-11-04.p  2020-12-02.p  2021-01-06.p  2021-02-03.p  2021-03-03.p  2021-04-07.p  2021-07-07.p  2021-08-03.p  2021-09-01.p  2021-10-06.p
elabe/data_perso/: 2020-01-15.p  2020-02-05.p  2020-03-04.p  2020-03-31.p  2020-05-05.p  2020-06-03.p  2020-07-01.p  2020-10-07.p  2020-10-09.p  2020-11-04.p  2020-12-02.p  2021-01-06.p  2021-02-03.p  2021-03-03.p  2021-04-07.p  2021-07-07.p  2021-08-03.p
elabe/rapport/: get_data.sh
ifop/: ifop_extract.ipynb  ifop_extract_perso.ipynb  ifop_summary.ipynb
ifop/data/: 2019-01-19.p  2019-02-16.p  2019-03-23.p  2019-04-20.p  2019-05-18.p  2019-06-22.p  2019-07-18.p  2019-08-22.p  2019-09-21.p  2019-10-19.p  2019-11-16.p  2019-12-14.p  2020-01-25.p  2020-02-22.p  2020-03-28.p  2020-04-18.p  2020-05-23.p  2020-06-20.p  2020-07-16.p  2020-08-20.p  2020-09-19.p  2020-10-15.p  2020-11-19.p  2020-12-17.p  2021-01-08.p  2021-01-21.p  2021-02-05.p  2021-02-18.p
ifop/data_perso/: 2020-01-11.p  2020-02-08.p  (+11 more)
ipsos/: barometre_ipsos.csv  barometre_ipsos.ods  data_tmp.txt  infos.ods  ipsos_correction.ipynb  ipsos_extract.ipynb  ipsos_summary.ipynb  toolbox.py
mesure_erreurs/: bss.p  error_plot.ipynb  polls_analysis.ipynb
(+18 files in other folders)
