[tool.poetry]
authors = ["Romain Rincé"]
description = "Récupération, analyses et visualisations des rapports d'instituts de sondages."
name = "mesure_instituts_sondage"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">= 3.9, < 3.12"
PyPDF2 = "^1.26.0"
camelot-py = "^0.8.2"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
opencv-python-headless = "^4.5.1"
pandas = "^2.2.2"
scipy = "^1.6.2"
seaborn = "^0.13.2"
ing-theme-matplotlib = "^0.1.7"
tqdm = "^4.62.3"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.2"
numpy = "^2.0.0"
plotly = "^5.22.0"
loess = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]